--- a/AuthorDoc/AuthorDoc.vbproj
+++ b/AuthorDoc/AuthorDoc.vbproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <MyType>WindowsForms</MyType>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CAE00284-3465-41F7-973F-093CC4795B62}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,15 +46,17 @@
     <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="atcUtility, Version=3.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <Private>False</Private>
+    <Reference Include="atcUtility, Version=3.1.2.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BASINS40\Bin\Plugins\Basins\atcUtility.dll</HintPath>
     </Reference>
     <Reference Include="Interop.Word, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>obj\Debug\Interop.Word.dll</HintPath>
+      <HintPath>.\Interop.Word.dll</HintPath>
     </Reference>
-    <Reference Include="MapWinUtility, Version=1.0.3455.23345, Culture=neutral, processorArchitecture=MSIL">
-      <Private>False</Private>
+    <Reference Include="MapWinUtility, Version=4.8.8.20629, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BASINS40\Bin\MapWinUtility.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.Compatibility">
       <Name>Microsoft.VisualBasic.Compatibility</Name>
@@ -185,6 +187,9 @@
       <DependentUpon>frmSample.vb</DependentUpon>
     </EmbeddedResource>
     <Content Include="AuthorDoc.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="My Project\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
